--- a/templates/admin/users/listing.html.twig
+++ b/templates/admin/users/listing.html.twig
@@ -137,7 +137,7 @@
                 </div>
 
                 <div class="flex justify-center w-full">
-                    <a href="{{ path('app_sortie_creer') }}" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+                    <a href="{{ path('admin_user_create') }}" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                         Créer un user
                     </a>
                 </div>
